--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -42,7 +42,9 @@
 html,
 body {
     max-width: 100vw;
-    overflow-x: hidden;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    align-items: center;
 }
 
 a {
